25Feb99========================================================================
1. added NL language stuff.
2. added set/language
21Feb99========================================================================
1. Allowed multiple 'on <freq>' for show/dx
2. Made sure the 'on 20m/ssb' thing worked (also 'on hf/cw').
3. first cut of the Filtering code, no user commands yet but the file
format is defined and manually added filters should work for spots
17Feb99========================================================================
1. added export_user.pl to export user files (for interest and safety)
2. changed DXUser::init to allow O_RDONLY access which may limit the number
of coredumps G0RDI seems to get.
15Feb99========================================================================
1. Added msg forwarding code which uses $main::root/msg/forward.pl.
14Feb99========================================================================
1. Changed A & K in WWV to be the other way around (I am told by G3IOR that
this will mean that we won't have pole to pole aurora nor all the power lines
overloading everywhere as well as a result of having values of K > 10).
2. allow the '~' character in message bodies.
3. Moved $main::data/badmsg.pl to $main::root/msg/badmsg.pl.
11Feb99========================================================================
1. Fixed a problem with isolated nodes' configurations being sent on sending 
local configs to new connections.
08Feb99========================================================================
1. added a $SIG{ALRM} in the client to actually catch the alarm when it goes 
off which means that the netrom/ax25 call programs terminate properly (and not
loop as fast as their little legs can paddle, soaking up CPU time).
2. Implemented read receipts as an especial request from G4PDQ.
3. Fiddled with DXUser a bit to see whether I can stop it core dumping on new
users in PC16s on G0RDI's machine.
4. Added E4 (Palestine) to Prefix data.